@@ -1,4 +1,13 @@
 # Changelog
+	
+	[thu 03 mar]
+	
+	New: Changelog has been neglected for too long.
+	New: Comment separated into its own class (like articles)
+	New: Search functionality
+	Fix: Search functionality default regexp matches whole words only, not parts
+	Fix: Article lookup through mysql uses less resources	
+
 
 	[wed 23 feb]
 	
